--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="remind"></div>
         <div class="player">
             <div class="play">Player X : <span class="playerX">0</span></div>
+            <div class="play">Tie : <span class="tie">0</span></div>
             <div class="play">Player O : <span class="playerO">0</span></div>
         </div>
         <button class="restart">Restart</button>
